fixed ASA logo on homepage on mobile

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -247,7 +247,7 @@ a:focus
 
 @media (max-width:766px){
     .intro{
-        height: 100px;
+        height: 150px;
     }
 }
 .non-intro
@@ -862,7 +862,9 @@ h3.name {
     width: 200px;
 }
 
-
 .bio_text {
     height:135px;
+}
+p.code {
+    display: none;
 }
